--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "gulp": "^3.9.1",
     "gulp-typescript": "^2.13.6",
     "merge2": "^1.0.2",
+    "mocha": "^2.5.3",
     "recursive-readdir": "^2.0.0",
     "requiredir": "^1.0.7"
   },
   "dependencies": {
     "continuation-local-storage": "^3.1.7",
     "debug": "^2.2.0",
-    "sequelize": "^3.23.4"
+    "sequelize": "^3.23.4",
+    "underscore": "^1.8.3"
   },
   "peerDependencies": {
     "willburg": "git+https://github.com/kildevaeld/willburg.git",
