--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "willburg.sequelize",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -23,8 +23,8 @@
     "ajv": "^4.7.7",
     "continuation-local-storage": "^3.1.7",
     "debug": "^2.2.0",
-    "sequelize": "^3.23.4",
-    "underscore": "^1.8.3"
+    "lodash": "^4.16.4",
+    "sequelize": "^3.23.4"
   },
   "peerDependencies": {
     "willburg": "git+https://github.com/kildevaeld/willburg.git",
