--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "willburg.sequelize",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -24,7 +24,8 @@
     "continuation-local-storage": "^3.1.7",
     "debug": "^2.2.0",
     "lodash": "^4.16.4",
-    "sequelize": "^3.23.4"
+    "sequelize": "^3.23.4",
+    "willburg": "git+https://github.com/kildevaeld/willburg.git"
   },
   "peerDependencies": {
     "willburg": "git+https://github.com/kildevaeld/willburg.git",
