--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,12 +13,12 @@
     "node_modules"
   ],
   "files": [
-    "typings/index.d.ts",
     "src/creator.ts",
     "src/index.ts",
     "src/interfaces.ts",
     "src/query-formatter.ts",
     "src/queue.ts",
+    "src/resource-factory.ts",
     "src/resource.ts",
     "src/sequelize.ts",
     "src/task.ts"
